lanecwe-Prod/src/objects/LicenseSet__c.object
<CustomObject>
    <fields>
        <fullName>CompanyID__c</fullName>
        <label>CompanyID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>70</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Enterprise_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Enterprise Name</label>
        <referenceTo>Offerings__c</referenceTo>
        <relationshipLabel>LicenseSets</relationshipLabel>
        <relationshipName>LicenseSets1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HubID__c</fullName>
        <label>HubID</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>LicenseSets</relationshipLabel>
        <relationshipName>LicenseSets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Line_Number__c</fullName>
        <label>Line Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Licensed_Named_Users__c</fullName>
        <label>Number of Licensed Named Users</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_UnAssigned_Users__c</fullName>
        <label>Number of UnAssigned Users</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>LicenseSets</relationshipLabel>
        <relationshipName>LicenseSets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Order_Number__c</fullName>
        <label>Order Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <label>Price</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Product_Name__c</fullName>
        <label>Product Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>LicenseSets</relationshipLabel>
        <relationshipName>LicenseSets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SKU__c</fullName>
        <label>SKU</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Subscription_License_Term_Months__c</fullName>
        <label>Subscription License Term(Months)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Test_State__c</fullName>
        <label>Test State</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Z_Source__c</fullName>
        <label>Z-Source</label>
        <picklist>
            <picklistValues>
                <fullName>eCommerce</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Salesgateway</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>zAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>zAccount</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>LicenseSets</relationshipLabel>
        <relationshipName>LicenseSets1</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>LicenseSet</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Plan Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>LicenseSets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>